err/titus.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/avro'...
Compiling './lib/python3.5/site-packages/avro/io.py'...
***   File "./lib/python3.5/site-packages/avro/io.py", line 200
    bits = (((ord(self.read(1)) & 0xffL)) |
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/avro/ipc.py'...
***   File "./lib/python3.5/site-packages/avro/ipc.py", line 325
    except AvroRemoteException, e:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/avro/schema.py'...
***   File "./lib/python3.5/site-packages/avro/schema.py", line 340
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/avro/tool.py'...
***   File "./lib/python3.5/site-packages/avro/tool.py", line 85
    print "Port: %s" % server.server_port
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/avro-1.8.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/titus'...
Compiling './lib/python3.5/site-packages/titus/genpy.py'...
***   File "./lib/python3.5/site-packages/titus/genpy.py", line 1292
    print " ".join(map(json.dumps, message))
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/titus/inspector'...
Compiling './lib/python3.5/site-packages/titus/inspector/defs.py'...
***   File "./lib/python3.5/site-packages/titus/inspector/defs.py", line 336
    print "\nsubprocesses failed with exit code {0}".format(returnCode)
                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/titus/inspector/jsongadget.py'...
***   File "./lib/python3.5/site-packages/titus/inspector/jsongadget.py", line 100
    print self.help
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/titus/inspector/main.py'...
***   File "./lib/python3.5/site-packages/titus/inspector/main.py", line 60
    print self.help
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/titus/inspector/pfagadget.py'...
***   File "./lib/python3.5/site-packages/titus/inspector/pfagadget.py", line 68
    print self.help
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/titus/lib'...
Compiling './lib/python3.5/site-packages/titus/lib/kernel.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (kernel.py, line 66)
Listing './lib/python3.5/site-packages/titus/lib/model'...
Compiling './lib/python3.5/site-packages/titus/lib/model/svm.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (svm.py, line 63)
Listing './lib/python3.5/site-packages/titus/lib/prob'...
Listing './lib/python3.5/site-packages/titus/lib/stat'...
Listing './lib/python3.5/site-packages/titus/pmml'...
Listing './lib/python3.5/site-packages/titus/producer'...
Compiling './lib/python3.5/site-packages/titus/producer/kmeans.py'...
***   File "./lib/python3.5/site-packages/titus/producer/kmeans.py", line 150
    print "iter  values"
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/titus-0.8.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
